--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/assets/css/index.css">
 </head>
 
 <body>
+
 
     <script src="/assets/js/bundle.js"></script>
 </body>
